tests/EtaX/EtaX.prop/EtaX.prop.04.check
// src:   val t2e: () => Any = { val t = prop _ ; t } // ?/ok
// 2.13-base warn 
target/tests/EtaX/EtaX.prop/EtaX.prop.04.scala:13: warning: Methods without a parameter list and by-name params can no longer be converted to functions as `m _`, write a function literal `() => m` instead
  val t2e: () => Any = { val t = prop _ ; t } // ?/ok
                                 ^
1 warning

// 2.13-head warn  <no change>
// 2.13-new  error
target/tests/EtaX/EtaX.prop/EtaX.prop.04.scala:13: error: Methods without a parameter list and by-name params can not be converted to functions as `m _`, write a function literal `() => m` instead
  val t2e: () => Any = { val t = prop _ ; t } // ?/ok
                                 ^
1 error

// 3.0-old   warn 
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX.prop/EtaX.prop.04.scala:13:38 
13 |  val t2e: () => Any = { val t = prop _ ; t } // ?/ok
   |                                 ^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 warning found

// 3.0       error
-- [E099] Syntax Error: target/tests/EtaX/EtaX.prop/EtaX.prop.04.scala:13:38 ---
13 |  val t2e: () => Any = { val t = prop _ ; t } // ?/ok
   |                                 ^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- [E007] Type Mismatch Error: target/tests/EtaX/EtaX.prop/EtaX.prop.04.scala:13:42 
13 |  val t2e: () => Any = { val t = prop _ ; t } // ?/ok
   |                                          ^
   |                                          Found:    (t : String)
   |                                          Required: () => Any
2 errors found

// 3.1-migr  error
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX.prop/EtaX.prop.04.scala:13:38 
13 |  val t2e: () => Any = { val t = prop _ ; t } // ?/ok
   |                                 ^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- [E007] Type Mismatch Error: target/tests/EtaX/EtaX.prop/EtaX.prop.04.scala:13:42 
13 |  val t2e: () => Any = { val t = prop _ ; t } // ?/ok
   |                                          ^
   |                                          Found:    (t : String)
   |                                          Required: () => Any
1 warning found
1 error found

// 3.1       error
-- [E099] Syntax Error: target/tests/EtaX/EtaX.prop/EtaX.prop.04.scala:13:38 ---
13 |  val t2e: () => Any = { val t = prop _ ; t } // ?/ok
   |                                 ^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- [E007] Type Mismatch Error: target/tests/EtaX/EtaX.prop/EtaX.prop.04.scala:13:42 
13 |  val t2e: () => Any = { val t = prop _ ; t } // ?/ok
   |                                          ^
   |                                          Found:    (t : String)
   |                                          Required: () => Any
2 errors found


warn  warn  error warn  error error error
